# OverseerV2

./: .editorconfig  .env.dist  .gitignore  .htaccess  Cargo.toml  Makefile  README.md  Vagrantfile  abilities.php  abilityscan.php  accountform.php  addaccount.php  addcharacter.php  additem.php  addsession.php  alchemy.php  anicetest.txt  aspectpatterns.php  atheneum.php  betheotherguy.php  catalogue.php  chainviewer.php  changechar.php  changelog.php  characterform.php  charcreate.php  charcreate2.php  charlog.php  code_calculator.php  composer.json  confirm.php  consortcalculate.php  consorts.php  createsession.php  delchar.php  docker-compose.yml  dologin.php  dreamtransition.php  dungeonexit.php  dungeongen.php  (+62 more)
backend/: download-build-sources.sh
css/: echeladder.css  overseer.css  strife.css  tooltipster.css  tooltipster2.css
debug/: itemlist.php
devtools/: .gitignore  absfix.php  announcements_doc.txt  announcer.php  art.php  authoring.php  blahsquirrel.php  cheatpolice.php  cheatpolice.txt  debuglog.php  devconnect.php.dist  developerguidetoeffects.txt  giveblahmodlevels.php  itemedit.php  itemeditguide.txt  logviewer.php  notifications_documentation.txt  oldwearables.php  portfolio_test_battery.txt  rewards.php  stat_documentation.txt  tasks.txt
error/: 500.html
forms/: addaccount.php  addsession.php  charcreate.php  dologin.php  selchar.php
html/: walkabout.html  walkabout.js
inc/: accrow.php  autoload.php  bugcatcher.php  database.php  database.php.dist  dotenv_load.php  footer.php  header.php  pageload.php  tumblr.php
includes/: accrow.php  additem.php  bootstrap.php  captchalogue.php  consumeeffects.php  consumeeffects_hard.php  damageeffects.php  database.php.dist  designix.php  displayfunctions.php  dologin.php  dungeondrawtest.php  footer.php  glitches.php  global_functions.php  head.php  header.php  headerin.php  item.php  item_render.php  posteffects.php  preeffects.php  pricesandvalues.php  (+1 more)
(+207 files in other folders)
