[package]
name = "overseer-reboot"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-htmx = "0.7.0"
axum-login = "0.17.0"
itertools = "0.14.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.5", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
